styles.css
* { 
  margin: 0;
  padding: 0;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
}

body {
  font-size: 16px;
}

body, .form input, .form textarea, .btn-submit {
  font-family: 'Roboto', 'Arial', sans-serif;
  color: #595959;
}

h1, h2, h3, h5 {
  font-family: 'Raleway', 'Arial', sans-serif;
}

.container {
  padding: 80px 16px;
}

.navlink-wrapper, .about-wrapper, .skills-wrapper, .form {
  max-width: 960px;
  margin: 0 auto;
}

.banner-text, .about-wrapper, .skills-wrapper, .project-wrapper, .project, .project-info, .form, footer, .row-item, .social a {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}

/* --------------------
        Header
---------------------*/
.menu {
  width: 100%;
  position: fixed;
  top: 0;
  z-index: 3;
  background-color: transparent;
  -webkit-transition: all 0.75s;
  -o-transition: all 0.75s;
  transition: all 0.75s;
}

.navlink-wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
      -ms-flex-pack: start;
          justify-content: flex-end;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.navlink-wrapper a {
  text-decoration: none;
  text-transform: uppercase;
  color: #f4f2f0;
  padding: 0 3px;
  margin: 16px 8px;
}

.navlink-wrapper a:hover, a.active {
  color: #ff7b00;
}

.banner {
  height: 100vh;
  background-image: url("./images/banner-medium.jpg");
  background-position: center, center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.banner::before {
  content: '';
	position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  background: #770f8a;
  /* Chrome10-25, Safari5.1-6 */
  background: -webkit-linear-gradient(left, #ff7b00 1%,#770f8a 70%); 
  background: -o-linear-gradient(left, #ff7b00 1%,#770f8a 70%);
  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ 00b3b3*/
  background: linear-gradient(to right, #ff7b00 1%,#770f8a 70%);
  opacity: 0.80;
}

.banner-text {
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  z-index: 2;
  color: #ffffff;
  padding: 0 16px;
}

.banner-text h1 {
  font-size: 64px;
}

.banner-text p {
  font-size: 32px;
}

/* --------------------
        #About
---------------------*/
.section-header {
  font-size: 40px;
  color: #737373;
  text-transform: uppercase;
  text-align: center;
  position: relative;
  padding-bottom: 8px;
}

.underline {
  width: 75px;
  height: 3px;
  margin: 0 auto 80px auto;
  background: #770f8a; /* Old browsers */
  background: -webkit-linear-gradient(left, #ff7b00 1%,#770f8a 70%); /* Chrome10-25,Safari5.1-6 */
  background: -o-linear-gradient(left, #ff7b00 1%,#770f8a 70%);
  background: linear-gradient(to right, #ff7b00 1%,#770f8a 70%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
}

.about-wrapper {
  padding: 0 26px;
}

.portrait-wrapper {
  display: block;
  width: 300px;
  height: 300px;
  margin: 0 auto 3em;
}

.portrait {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 50%;
}

.column1, .column2 {
  padding: 0 0 2em;
}

.column1 img, .column2 img {
  display: none;
}

.about-wrapper h5 {
  display: inline;
  text-transform: uppercase;
  letter-spacing: 0.15em;
  color: #333333;
  font-weight: bold;
  padding-bottom: 1em;
  border-bottom: 1px solid #770f8a;
}

.about-wrapper p {
  line-height: 1.7;
  text-align: justify;
}

.new-p {
  margin-top: 1.5em;
}

.column1 p:first-of-type, .column2 p:first-of-type {
  margin-top: 2em;
}

.about-wrapper a, .project-info a {
  text-decoration: none;
  color: #770f8a;
}

.about-wrapper a:hover {
  color: #333333;
  cursor: pointer;
}

/* --------------------
        #Skills
---------------------*/
.skills-item {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: start;
    -ms-flex-align: start;
      align-items: flex-start;
  line-height: 1.7;
  margin-bottom: 32px;
}

.skills-item .skills-item-content {
  -webkit-box-flex: 1;
      -ms-flex: 1;
          flex: 1;
  padding: 0 25px;
}

.skills-item h5, .social h4 {
  text-transform: uppercase;
  letter-spacing: 0.15em;
  margin-bottom: 16px;
  color: #333333;
  font-weight: bold;
}

.skills-icon {
  width: 50px;
  height: 50px;
}

/* --------------------
        #Projects
---------------------*/
.project-wrapper {
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;;
}

.project {
  -ms-flex-pack: distribute;
      justify-content: space-around;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  text-align: center;
  width: 100%;
  height: 450px;
  background-color: #ffffff;
  margin: 8px 0;
  position: relative;
  border-radius: 2px;
}

.project-img-wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  width: 120px;
  height: 120px;
  background: #770f8a;
  border-radius: 50%;
}

.project-img {
  width: 50px;
  height: 50px;
}

.project h3 {
  font-size: 20px;
  text-transform: uppercase;
  font-weight: bold;
  color: #333333;
}

.project-info {
  -ms-flex-pack: distribute;
      justify-content: space-around;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
  padding: 0 10px;
  background-color: inherit;
  font-size: 16px;
  line-height: 1.7;
  text-align: center;
  overflow: hidden;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: 0.75s ease;
  -o-transition: 0.75s ease;
  transition: 0.75s ease;
}

.project-info h3 {
  color: #ff7b00;
}

.project-btn {
  width: 150px;
  padding: 5px;
  background: #ff7b00;
  color: #ffffff;
  border: 2px solid #ff7b00;
  border-radius: 3px;
}

.project-btn:hover, .submit:hover {
  cursor: pointer;
  background: #ffffff;
  color: #ff7b00;
}

.project:hover .project-info {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.tags-container {
  list-style-type: none;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
}

.tags-container li {
  font-size: 14px;
  background-color: #ffffff;
  color: #333333;
  border: 1px solid #333333;
  border-radius: 3px;
  padding: 0 0.625em;
  margin-right: 0.625em;
  margin-top: 14px;
}

/* --------------------
        #Contact
---------------------*/

#contact {
  padding-bottom: 0; 
}

.form-row {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

.row-item {
  width: 48%;
}

.form input, .form textarea {
  margin: 5px 0 10px 0;
  font-size: 15px;
  padding: 8px;
  border: none;
  border-radius: 3px;
  background-color: #e6e6e6;
  color: #000000;
}

.form textarea {
  min-height: 180px;
  margin-top: 5px;
  resize: none;
}

.submit {
  font-size: 16px;
  text-transform: uppercase;
  padding: 12px 0;
  background: #770f8a;
  color: #ffffff;
  border: 2px solid #770f8a;
  border-radius: 3px;
  margin: 32px auto 0 auto;
  width: 100%;
  letter-spacing: 0.1em;
}

.submit:hover {
  color: #770f8a;
}

.error-name, .error-email, .error-msg {
  font-size: 14px;
  color: #990000;
  margin-bottom: 10px;
}

.social {
  display: flex;
  -ms-flex-pack: distribute;
  justify-content: space-between;
  max-width: 480px;
  margin: 100px auto 65px auto;
  list-style-type: none;
}

.social a {
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  text-decoration: none;
  border: 2px solid #770f8a;
  border-radius: 50%;
  padding: 12px;
  /* For Safari */
  text-align: center;
}

.social-icon:hover {
  -webkit-transform: scale(1.2);
  -ms-transform: scale(1.2);
  transform: scale(1.2);
}

/* --------------------
        Footer
---------------------*/

footer {
  min-height: 175px;
  background-color: #1a1a1a;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  padding: 25px 0;
  text-align: center;
}

footer div {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 24px;
}

footer p {
  font-size: 14px;
  color: #b3b3b3;
  padding: 10px 15px;
}

footer div p:first-of-type {
  border-right: 1px solid #b3b3b3;
}

.attr {
  padding: 3px;
  color: #808080; 
}

.attr a {
  color: inherit;
}

/* --------------------
      Media queries
---------------------*/

@media screen and (min-width: 410px) {
  .project {
    width: 375px;
  }
}

@media screen and (min-width: 761px) {
  @keyframes slide-in {
    0% {
      transform: translateX(100vw)
    }
    100% {
      transform: translateX(0%)
    }
  }
  .container {
    padding: 120px 40px;
  }
  .navlink-wrapper a {
    margin: 20px 16px;
  }
  .navlink-wrapper a:last-of-type {
    margin-right: 40px;
  }
  .banner {
    background-image: url("./images/banner-large.jpg");
  }
  .banner-text {
    padding: 0 40px;
  }
  .banner-text p {
    margin-left: 24px;
  }
  .skills-item {
    transform: translateX(100vw);
  }
  .animate {
    animation: 2s both slide-in;
  }
  .about-wrapper {
    flex-direction: row;
    padding: 0;
    justify-content: space-between;
  }
  .column1, .column2 {
    width: calc(50% - 1.5em);
    padding: 0;
  }
  .project-wrapper {
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
    width: 100%;
    max-width: 1920px;
        -ms-flex-wrap: wrap;
            flex-wrap: wrap;
      -webkit-box-pack: center;
        -ms-flex-pack: center;
      justify-content: center;
  }
  .project {
    margin: 20px;
  }
}


@media only screen and (min-width: 961px) {
  .navlink-wrapper a:last-of-type {
    margin-right: 0;
  }
  .banner-text {
    width: 960px;
    margin: 0 auto;
    padding: 0;
  }
  .about-wrapper {
    justify-content: center;
  }
  .portrait-wrapper {
    display: none;
  }
  .column1, .column2 {
    width: calc(50% + 170px);
  }
  .column1:before, .column2:before {
    float: right;
    width: 1px;
    height: 96px;
    content: " ";
  }
  .column2:before {
    float: left;
  }
  .column1 img, .column2 img {
    display: block;
    float: right;
    clear: right;
    width: 300px;
    height: 300px;
    border-radius: 50%;
    margin: 1em 0 1em 1em;
    shape-outside: circle(50%);
  }
  .column2 img {
    float: left;
    clear: left;
    margin: 1em 1em 1em 0;
  }
  .column1 p, .column1 h5 {
    margin-right: 182px;
  }
  .column2 p, .column2 h5 {
    margin-left: 182px;
  }
  .column2 {
    margin-left: -300px;
  }
  .skills-wrapper {
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    -ms-flex-wrap: wrap;
        flex-wrap: wrap;
  }
  .skills-item {
    -webkit-box-flex: 1;
        -ms-flex: 1 1 350px;
            flex: 1 1 350px;
  }
  .skills-item:nth-child(2n) {
    animation-delay: 1s;
  }
}

